--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
     "react-scripts": "5.0.0",
+    "sass": "^1.45.2",
     "web-vitals": "^2.1.2"
   },
   "scripts": {
