--- a/package.json
+++ b/package.json
@@ -4,9 +4,13 @@
   "private": true,
   "dependencies": {
     "@hookform/resolvers": "^2.8.8",
-    "@testing-library/jest-dom": "^5.16.1",
-    "@testing-library/react": "^12.1.3",
-    "@testing-library/user-event": "^13.5.0",
+    "@jest/globals": "^27.5.1",
+    "@testing-library/jest-dom": "^5.11.9",
+    "@testing-library/react": "^11.2.5",
+    "@testing-library/user-event": "^12.7.2",
+    "@toolz/allow": "^1.0.1",
+    "@toolz/is-a-regular-object-react": "^1.0.0",
+    "babel-core": "^7.0.0-bridge.0",
     "bulma": "^0.9.3",
     "chart.js": "^3.7.1",
     "enzyme-adapter-react-15": "^1.4.3",
@@ -27,7 +31,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test --transformIgnorePatterns \\\"node_modules/(?!@toolz/allow-react)/\\\" --env=jsdom\"",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -49,9 +53,13 @@
     ]
   },
   "devDependencies": {
+    "@babel/preset-react": "^7.16.7",
+    "@testing-library/react": "^12.1.3",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.6",
     "react-hook-form": "^7.27.0",
-    "react-use": "^17.3.2"
+    "react-use": "^17.3.2",
+    "@babel/plugin-transform-modules-commonjs": "^7.12.13",
+    "babel-jest": "^26.6.3"
   }
 }
